# inbox_zero

./: .gitignore  CLAUDE.md  KANBAN.md  email_reader.py  pyproject.toml
adapters/: email_repository_imap.py
ports/: email_repository.py
src/inbox_zero/: main.py
src/inbox_zero/adapters/: email_repository_imap.py
src/inbox_zero/app/: main.py
src/inbox_zero/archive_email/: adapter.py  port.py  use_case.py
src/inbox_zero/create_imap_account/: adapter.py  port.py  use_case.py
src/inbox_zero/list_imap_accounts/: adapter.py  port.py  use_case.py
src/inbox_zero/ports/: email_repository.py
src/inbox_zero/read_first_email/: adapter.py  port.py  use_case.py
src/inbox_zero/shared/: email_reader.py
src/inbox_zero/use_cases/: archive_first_email.py  read_first_email.py
tests/: test_email_reader.py
tests/archive_email/: test_use_case.py
tests/create_imap_account/: test_adapter.py  test_use_case.py
tests/list_imap_accounts/: test_adapter.py  test_use_case.py
tests/read_first_email/: test_adapter.py  test_use_case.py
tests/shared/: test_email_reader.py
tests/test_adapters/: test_email_repository_imap.py
tests/test_use_cases/: test_archive_first_email.py  test_read_first_email.py
use_cases/: archive_first_email.py  read_first_email.py
