[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.31.0",
    "imap-tools>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "testcontainers>=4.0.0",
    "pyqure @ git+https://github.com/Johjo/pyqure.git",
]

[tool.setuptools]
py-modules = ["main", "app"]
