[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox_zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.31.0",
    "imap-tools>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "testcontainers>=4.0.0",
    "pyqure @ git+https://github.com/Johjo/pyqure.git",
]

[tool.setuptools]
py-modules = ["main", "app"]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
